Alternative to spring's protected MethodSecurityExpressionRoot